# pkg/api/v20230701preview/openshiftcluster_example.go
@@ -37,7 +37,7 @@ func ExampleOpenShiftClusterPutParameter() interface{} {
 	oc.Properties.APIServerProfile.IP = ""
 	oc.Properties.IngressProfiles[0].IP = ""
 	oc.Properties.MasterProfile.EncryptionAtHost = EncryptionAtHostEnabled
-	oc.Properties.NetworkProfile.LoadbalancerProfile = &LoadbalancerProfile{
+	oc.Properties.NetworkProfile.LoadBalancerProfile = &LoadBalancerProfile{
 		ManagedOutboundIPs: &ManagedOutboundIPs{
 			Count: 1,
 		},
@@ -53,7 +53,7 @@ func ExampleOpenShiftClusterResponse() interface{} {
 	oc := exampleOpenShiftCluster()
 	oc.Properties.ClusterProfile.PullSecret = ""
 	oc.Properties.ServicePrincipalProfile.ClientSecret = ""
-	oc.Properties.NetworkProfile.LoadbalancerProfile = &LoadbalancerProfile{
+	oc.Properties.NetworkProfile.LoadBalancerProfile = &LoadBalancerProfile{
 		EffectiveOutboundIPs: []EffectiveOutboundIP{
 			{
 				ID: "/subscriptions/subscriptionId/resourceGroups/clusterResourceGroup/provides/Microsoft.Network/publicIPAddresses/publicIPAddressName",
